hermes_fuzz_executed_few_shot/fuzz_16_execution
'use strict';


class Class1 {
    constructor() {
        console.log("constructor");
    }

    static method1(p1) {
        return p1;
    }
    method2(p1, p2, p3) {
        console.log("method", p1, p2, p3);
    }
}
let object1 = new Class1();
object1.method1(1);
object1[Class1.method1](2);


Execution Output ------------------:
test.js:4:1: error: invalid statement encountered.
class Class1 {
^~~~~~~~~~~~~~
test.js:16:19: warning: the variable "Class1" was not declared in function "global"
let object1 = new Class1();
                  ^~~~~~
Emitted 1 errors. exiting.
